City - created test builder, updated controller and service, added test constants, added country factory, fixed tests Country - removed unused variables in service